# GraphVault

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vercel.json
.claude/agents/: gv-architect.md  gv-devops.md  gv-docs-writer.md  gv-graph-engineer.md  gv-orchestrator.md  gv-qa-reviewer.md  gv-security-engineer.md  gv-server-engineer.md  gv-sync-engineer.md  gv-web-engineer.md
.claude/skills/building-memory-palaces/: SKILL.md
.claude/skills/gv-data-safety/: SKILL.md
.claude/skills/gv-gauntlet/: SKILL.md
.claude/skills/gv-lessons/: SKILL.md
.claude/skills/gv-perf-budget/: SKILL.md
.claude/skills/gv-pick-next/: SKILL.md
.claude/skills/gv-privacy-check/: SKILL.md
.claude/skills/gv-responsive/: SKILL.md
.claude/skills/gv-security/: SKILL.md
.claude/skills/gv-ship/: SKILL.md
.claude/skills/gv-slice/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-release.yml
apps/desktop/: README.md  package.json  tsconfig.json
apps/desktop/src/: tauriStorageAdapter.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/extension/: README.md  background.js  clipper.js  clipper.test.js  content.js  manifest.json  package.json  popup.css  popup.html  popup.js
apps/extension/scripts/: generate-icons.mjs  package.mjs
apps/server/: .env.example  .gitignore  README.md  package.json  tsconfig.json
apps/server/prisma/: schema.prisma
apps/server/src/: app.ts  config.ts  errors.ts  index.ts  preflight.ts
apps/server/test/: ai.test.ts  aiCache.test.ts  azure.test.ts  clip.test.ts  gcs.test.ts  inbox.test.ts  preflight.test.ts  s3.test.ts  sec-audit.test.ts  server.test.ts  snapshots.test.ts  ssrf.test.ts  store-inbox.test.ts  webdav.test.ts
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts
docker/: Caddyfile  README.md  env.example  server.Dockerfile
docs/: PRICING.md  ROADMAP.md  ai-bff.md  data-portability.md  deployment.md  hardening.md  mobile-setup.md  publishing-packages.md  quickstart.md  releasing.md  security-basics.md  security-model.md  sync-protocol.md
docs/agent-company/: README.md  lessons.md  playbook.md
ops/: DEPLOYMENT.md  backup.sh  gv
scripts/: README.md  deploy.sh  generate-desktop-icons.mjs  generate-pwa-icons.mjs  smoke-web.mjs  verify-deploy.sh
(+238 files in other folders)
