[package]
name = "graphvault"
version = "0.1.0"
description = "GraphVault - local-first Markdown notes with a graph you can think in"
authors = ["GraphVault contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.77"

# Silence Cargo's "unused manifest key" warning: `default-run` is set so that
# `cargo run` always resolves to the Tauri binary entry-point.
default-run = "graphvault"

[[bin]]
name = "graphvault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri runtime
tauri = { version = "2", features = [
  # Dialog plugin for the native folder-picker (vault open / save-as)
  "dialog",
] }

# Tauri plugins - only what Milestone 16 requires
tauri-plugin-fs = "2"      # Read / write .md files on disk
tauri-plugin-dialog = "2"  # Open-vault folder picker

# Serialisation for IPC return values
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # smaller binary; Tauri default
codegen-units = 1
opt-level = "s"   # optimise for size
lto = true

[profile.dev]
incremental = true
